[metadata]
name = tmfa
url = https://github.com/biosustain/multivariate-tmfa
download_url = https://pypi.org/project/tmfa/
project_urls =
    Source Code = https://github.com/biosustain/multivariate-tmfa
    Documentation = https://tmfa.readthedocs.io
    Bug Tracker = https://github.com/biosustain/multivariate-tmfa/issues
author = Vishnuvardhan Mahamkali
author_email = v.mahamkali@uq.edu.au
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = Multivariate thermodynamics-based metabolic flux analysis in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    thermodynamics
    multivariate
    flux analysis
    metabolic
    tmfa

[options]
zip_safe = True
install_requires =
    cobra
    depinfo
    optlang
    numpy
    scipy
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    pep517
    tox
    twine

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/tmfa/_version.py
versionfile_build = tmfa/_version.py
tag_prefix =

